--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongoose": "^6.3.1",
     "volleyball": "^1.5.1",
     "yup": "^0.32.11"
   },
